Added virtual thread support